discussion/kv_engine/152689/152689_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove ActiveStream::shouldProcessItem

ActiveStream::shouldProcessItem is logically

    Item::shouldReplicate && sysevent-check

Given that sysevent-check is a tautology, just make the call to
Item::shouldReplicate.

Change-Id: I4393f8bcdb41c6edb0778ff41c1afb71798641b5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-06-08 12:52:57.000000000
Message: 
Patch Set 5: Patch Set 4 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-06-08 12:54:38.000000000
Message: 
Removed Well-Formed-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 14:42:41.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9602/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9602/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9602/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8200/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36558/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/145/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31238/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10249/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11326/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11598/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11178/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2021-06-08 16:16:57.000000000
Message: 
Patch Set 5:

(1 comment)
Line:1319, engines/ep/src/dcp/active_stream.cc -> iirc the intent here was if we have system events which don't replicate (which we don't yet have)

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-06-08 16:59:30.000000000
Message: 
Patch Set 5:

(1 comment)
Line:1319, engines/ep/src/dcp/active_stream.cc -> Sure, I'm obviously happy to step back if you want to leave this as a placeholder - but we can just re-introduce it back when/if necessary

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-06-09 14:49:55.000000000
Message: 
Patch Set 5: Verified+1

Unrelated failure at http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9602/
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-06-09 14:49:57.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-10 07:54:57.000000000
Message: 
Patch Set 5: Code-Review-1

(1 comment)
Line:1319, engines/ep/src/dcp/active_stream.cc -> I think there's no harm in leaving this code as-is - it captures the semantic difference that only certain system events should be replicated. It doesn't really complicate or slow down the code (IMHO).

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-06-10 08:15:30.000000000
Message: 
Patch Set 5:

(1 comment)
Line:1319, engines/ep/src/dcp/active_stream.cc -> No problem, I'll keep the condition, I'll just move it into Item::shouldReplicate as that seems the natural place for it and that allows to remove a useless function.

But I'm surprised on the approach on this particular case, as we have a number of enums everywhere and obviously we don't spread switch-cases(s) around just because we may need that in the future. Maybe I miss something, is there already a plan to introduce further SysEvent types that aren't being replicated over DCP ?

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-10 08:49:35.000000000
Message: 
Patch Set 5:

(1 comment)
Line:1319, engines/ep/src/dcp/active_stream.cc -> The point is more that _if_ we added a SyncWrite tomorrow, it wouldn't replicate by default (and in fact you'd get a compile warning about an uncovered switch here). If you made your change that would no longer be the case.

Think of this function as a slightly more verbose version of just calling shouldReplicate _currently_ - the compiler will optimise all the "true"  away, but to the reader there's a clear intent on _why_ we choose to replicate some stuff but not others.

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2024-02-26 08:23:30.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> Removing myself as reviewer due to lack of updates for a few years
----------------------------------------------------------------------------------------------------------------------
